k8s/account-service/server/server.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: account-service-svc
  labels:
    app: account-service
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: account-service
    role: server
  type: ClusterIP
status:
  loadBalancer: {}
---

apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: account-service-depl
  labels:
    app: account-service
spec:
  # hpa로 관리할 것이므로 replicas 필요 없음
  # replicas: 2 
  selector:
    matchLabels:
      app: account-service
      role: server
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      creationTimestamp: null
      name: account-service
      labels:
        app: account-service
        role: server
    spec:
      containers:
      - image: iron2ron/account-service:latest
        imagePullPolicy: Always
        name: account-service
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 32Mi
            cpu: 200m
          limits:
            memory: 64Mi
            cpu: 400m
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 3
